# template_py

./: .create_tarfiles.sh  .gitmodules  .tar_fastapi.sh  LICENSE.txt  README.md  TODO.org  pyproject.toml  setup.py
configurator/: CITATION.txt  __init__.py  appmap.py  logger.py  util.py
django_template/: README.md  pyproject.toml
django_template/django_template/: settings.py  urls.py
django_template/django_template_app/: apps.py  forms.py  models.py  views.py
django_template/django_template_app/templates/: user_list.djhtml
fastapi_template/: .run.sh  package.json  postcss.config.mjs  pyproject.toml  tailwind.config.js
fastapi_template/app/: database.py  main.py  schemas.py
fastapi_template/app/alembic/: env.py
fastapi_template/app/assets/src/: styles.css
fastapi_template/app/crud/: items.py
fastapi_template/app/models/: item.py
template_py/: .gitignore  CITATION.txt  __init__.py  appmap.py  config.py  logger.py  pyproject.toml  setup.py  util.py
template_py/template_py/: config.py  logger.py  util.py
